--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-uncapitalize": "^1.0.0",
     "helmet": "^6.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.6.5",
     "pino": "^8.6.1",
     "pino-pretty": "^9.1.1",
