fix errors and add testing

--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/**/*.test.js --exit",
+    "test:coverage": "nyc mocha test/**/*.test.js --exit"
   },
   "author": "HD",
   "license": "ISC",
@@ -22,6 +23,9 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
