--- a/src/package.json
+++ b/src/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-uncapitalize": "^1.0.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^6.6.5",
+    "mongoose": "^6.13.0",
+    "package.json": "^2.0.1",
     "pino": "^8.6.1",
     "pino-pretty": "^9.1.1",
     "uuid": "^9.0.0"
