--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "helmet": "^6.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.6.5",
+    "morgan": "^1.10.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
   },
