--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.8",
+    "concurrently": "^8.2.2",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
